cfn-templates/jenkins.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Jenkins Stack
Parameters:
  Project:
    Type: String

  TraineeName:
    Type: String

  PublicHostedZoneName:
    Description: The Route53 Zone in which to create records
    Type: String

  AmiID:
    Type: String
    Description: 'AMI ID'

  InstanceType:
    Description: The Instance type which used to build stack.
    Type: String

  ASGMaxSize:
    Description: AutoScaling max size
    Type: Number
    Default: 1

  ASGMinSize:
    Description: AutoScaling min size
    Type: Number
    Default: 1

Resources:
  JenkinsASGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier:
        - "Fn::ImportValue": !Sub "${Project}-private-subnet-a"
        - "Fn::ImportValue": !Sub "${Project}-private-subnet-b"
      LaunchConfigurationName: !Ref JenkinsASLaunchConf
      MinSize: !Ref ASGMinSize
      MaxSize: !Ref ASGMaxSize
      Tags:
        - Key: Name
          Value: !Sub "${Project}-jenkins-${TraineeName}"
          PropagateAtLaunch: true

  JenkinsASLaunchConf:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: !Ref AmiID
      InstanceType: !Ref InstanceType
      KeyName: !Ref Project
      SecurityGroups:
      - !Ref JenkinsSSHSecurityGroup
      - !Ref JenkinsConnectionSecurityGroup
      UserData:
        "Fn::Base64": !Sub |
          #!/bin/bash -ex
          yum update -y
          yum remove -y java-1.7.0-openjdk
          yum install -y java-1.8.0
          wget -O /etc/yum.repos.d/jenkins.repo http://pkg.jenkins-ci.org/redhat/jenkins.repo
          rpm --import https://jenkins-ci.org/redhat/jenkins-ci.org.key
          yum install -y jenkins
          service jenkins start

  JenkinsSSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allowing incoming on ssh port
      SecurityGroupIngress:
      - CidrIp:
          "Fn::ImportValue": !Sub "${Project}-vpc-cidr"
        IpProtocol: '-1'
        FromPort: 0
        ToPort: 0
      - CidrIp:
          "Fn::ImportValue": !Sub "${Project}-vpc-cidr"
        IpProtocol: tcp
        FromPort: 22
        ToPort: 22
      VpcId:
        "Fn::ImportValue": !Sub "${Project}-vpc-id"

  JenkinsConnectionSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allowing Jenkins client connection
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
      VpcId:
        "Fn::ImportValue": !Sub "${Project}-vpc-id"
